[workspace]
members = ["crates/server"]
resolver = "3"

[workspace.dependencies]
# Utilities
anyhow = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
chrono = { version = "0.4.42" }

# randomness
rand = "0.9.2"

# Concurrency channels and utilities
crossbeam = "0.8.4"

# SSL/TLS
rustls = "0.23.36"
rustls-native-certs = "0.8.3"

# async & async TLS
tokio-rustls = "0.26.4"
tokio = { version = "1.49.0", features = [
    "net",
    "io-util",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "process",
] }
futures = "0.3.31"
async-trait = "0.1.89"

# channel
flume = "0.12.0"

# HTTP client
reqwest = { version = "0.13.1", features = ["json", "rustls", "system-proxy"] }

# Json handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding/Decoding
base64 = "0.22.1"

# i18n
gettext = "0.4.0"
rust-embed = "8.9.0"
sys-locale = "0.3.2"

# Encryption
aes-gcm = "0.10.3"

# regex
regex = "1.12.2"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "local-time",
] }
tracing-log = "0.2.0"

# Testing
serial_test = "3.3"
mockito = "1.7"
