[workspace]
members = ["crates/server", "crates/shared"]
resolver = "3"

[workspace.package]
version = "5.0.0"
edition = "2024"
authors = ["Adolfo Gómez <dkmaster@dkmon.com>"]
license = "BSD-3-Clause"


[workspace.dependencies]
# Utilities
anyhow = "1.0"
thiserror = "2.0"
zeroize = { version = "1.8", features = ["derive"] }
chrono = { version = "0.4" }
num_enum = "0.7"

# randomness
rand = "0.10"

# SSL/TLS
rustls = "0.23"
rustls-native-certs = "0.8"

# async & async TLS
tokio-rustls = "0.26.4"
tokio = { version = "1.50.0", features = [
    "net",
    "io-util",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "process",
    "signal",
] }
futures = "0.3"
async-trait = "0.1"
tokio-test = "0.4"

# channel
flume = { version = "0.12", features = ["async"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "rustls", "system-proxy"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Json handling
serde_json = "1.0"
# toml for config
toml = "1.1"

# Encoding/Decoding
base64 = "0.22"

# i18n
gettext = "0.4"
rust-embed = "8.9"
sys-locale = "0.3"

# Encryption
aes-gcm = "0.10"
hkdf = "0.13"
sha2 = "0.11"

# Post-quantum cryptography
libcrux-ml-kem = "0.0.9"

# regex
regex = "1.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
] }
tracing-log = "0.2"

# Testing
serial_test = "3.4"
mockito = "1.7"
