[package]
name = "tunnel-server"
version = "5.0.0"
edition = "2024"

[dependencies]
# utilities
anyhow = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }

# serialization
serde = { workspace = true }

# http
reqwest = { workspace = true }
serde_json = { workspace = true }

# SSL/TLS
rustls = { workspace = true }
rustls-native-certs = { workspace = true }


# toml for config
toml = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

# Asynchronous runtime
tokio-rustls = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
hickory-resolver = { workspace = true }

# channel
flume = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockito = { workspace = true }
