[package]
name = "tunnel-server"
version = "5.0.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

# utilities
anyhow = { workspace = true }

# serialization
serde = { workspace = true }

# http
reqwest = { workspace = true }
serde_json = { workspace = true }

# SSL/TLS
rustls = { workspace = true }
rustls-native-certs = { workspace = true }

# toml for config
toml = { workspace = true }

# Asynchronous runtime
tokio-rustls = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# channel
flume = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
serial_test = { workspace = true }
