[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
# utilities
anyhow = { workspace = true }
rand = { workspace = true }
num_enum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Encoding/Decoding
base64 = { workspace = true }

# Asynchronous channels
flume = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }

# Post-quantum cryptography
libcrux-ml-kem = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

# Asynchronous runtime
tokio-rustls = { workspace = true }
tokio = { workspace = true }
