[package]
name = "ticket-crypt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }

hkdf = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
libcrux-ml-kem = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

base64 = { workspace = true }
